# RustCFML

./: .gitignore  CFCONFIG.md  CLAUDE.md  COMPARISON_TABLE.md  Cargo.toml  Issue188_NextSession.md  JAVA_SHIMS_IMPLEMENTATION_PLAN.md  JIT_DESIGN.md  JIT_NEXT_SESSION.md  JIT_PHASE2_PLAN.md  JIT_POLY_DESIGN.md  QOQPerformanceNextSteps.md  README.md  SESSION_EXPIRY_DESIGN.md  ScheduledTasksImplementation.md  TESTBOX_PARSER_ISSUE.md  gap_analysis_detailed.json  implementation_matrix_full.csv  lucee_supported_full.json  server-rcfml-lucee.json  server.json  sqlite::memory:  test_coverage.json  untested_items.json
.claude/workflows/: workflowsave.js
.github/workflows/: deploy-demo.yml  release.yml
RustCFMLWorker/: .gitignore  Cargo.toml  README.md  build.rs  jspi-patch.mjs  wrangler.toml
RustCFMLWorker/cfml/: Application.cfc  cfml.cfm  db.cfm  index.cfm  session.cfm  static.cfm
RustCFMLWorker/cfml/includes/: footer.cfm  header.cfm
RustCFMLWorker/src/: lib.rs
RustImageMax/: Cargo.toml  IMPLEMENTATION_PLAN.md
RustImageMax/src/: lib.rs
bench/baseline/: numeric_kernel.cfm  run_baseline.sh  string_kernel.cfm  struct_member_kernel.cfm  udf_call_graph.cfm
crates/cfml-codegen/: Cargo.toml
crates/cfml-codegen/src/: compiler.rs
crates/cfml-common/: Cargo.toml
crates/cfml-common/src/: clock.rs  cycle_gc.rs  dynamic.rs  lib.rs  session_cookie.rs  vfs.rs  vm.rs
crates/cfml-compiler/: Cargo.toml
crates/cfml-compiler/src/: ast.rs  lexer.rs  parser.rs  tag_parser.rs  token.rs
crates/cfml-compiler/tests/: bool_attr_expr.rs
crates/cfml-config/: Cargo.toml
crates/cfml-config/src/: env.rs  lib.rs  resolve.rs  schema.rs
crates/cfml-qoq/: Cargo.toml
crates/cfml-qoq/src/: ast.rs  compare.rs  compiled.rs  execution.rs  function.rs  functions.rs  intersection.rs  lexer.rs  lib.rs  like.rs  parser.rs  table.rs
crates/cfml-qoq/tests/: engine.rs
crates/cfml-stdlib/: Cargo.toml
crates/cfml-stdlib/src/: builtins.rs  db_driver.rs  dbinfo.rs  lib.rs  pg_sql.rs  s3.rs  s3_builtins.rs
crates/cfml-vm/: Cargo.toml
crates/cfml-vm/src/: application_store.rs  async_kernel.rs  debug_footer.rs  dump.rs  java_shims.rs  lib.rs  observe.rs  s3_vfs.rs  session_store.rs  socketio_compat.rs  tz.rs  web.rs  websocket.rs
crates/cfml-vm/src/jit/: analysis.rs  arena.rs  boxed.rs  builtins.rs  coverage.rs  mod.rs  osr.rs  shims.rs  translate.rs
crates/cfml-vm/tests/: application_function_cache.rs  application_stop.rs  cfcookie_expires.rs  cfcookie_path_samesite.rs  cfcookie_secure_httponly_expr.rs  cfdirectory_mapping.rs  cfloop_array_index.rs  component_mapping.rs  component_method_named_args.rs  component_method_precedence.rs  custom_tag.rs  jit_fuzz.rs  jit_numeric.rs  jit_persist.rs  jit_recursion.rs  jit_soak.rs  lazy_session.rs  lifecycle_target_page.rs  scalar_len.rs  session_data_only.rs  session_nested_writeback.rs  session_reaper_queue.rs  session_writeback.rs  string_member_regex.rs  xreq_appscope_dispatch.rs
crates/cfml-worker/: Cargo.toml
crates/cfml-worker/jspi/: README.md  cfml-jspi-shim.mjs  jspi-template-shim.mjs
crates/cfml-worker/src/: cfml_jspi.js  d1_driver.rs  do_application_store.rs  embedded_vfs.rs  handler.rs  hyperdrive_driver.rs  jspi.rs  jspi_smoke.rs  kv_stores.rs  lib.rs  scheduled.rs  scopes.rs  sync_runner.rs
crates/cli/: Cargo.toml
crates/cli/assets/lucee/: Query.cfc  Result.cfc
crates/cli/assets/socketio/: SocketIoNamespace.cfc  SocketIoServer.cfc  SocketIoSocket.cfc
crates/cli/src/: engine_cfc_overlay.rs  lib.rs  main.rs  rewrite.rs  socketio.rs  socketio_assets.rs  websocket.rs
crates/cli/src/session/: cluster.rs  datasource.rs  discovery.rs  memcached.rs  mod.rs
crates/cli/tests/: datasource_default_bare_query.rs  websocket_raw.rs  websocket_sio_compat.rs  websocket_socketio.rs
crates/cli/tests/fixtures/ds224_app/: Application.cfc  test.cfm
crates/cli/tests/fixtures/sio_app/: Application.cfc  index.cfm
crates/cli/tests/fixtures/ws_app/: publish.cfm
crates/cli/tests/fixtures/ws_app/websockets/: auth.cfc  echo.cfc  guarded.cfc  history.cfc  presence.cfc  raw.cfc  whisper.cfc
crates/wasm/: Cargo.toml
docs/: architecture.md  configuration.md  database.md  debugging.md  deployment.md  embedding.md  getting-started.md  java-shims.md  known-issues.md  lucee-differences.md  native-modules.md  observability-design.md  observability-implementation-plan.md  performance.md  s3.md  session-variables-this-live-alias.md  sessions.md  static-feature.md  status.md  testing.md  threads.md  wasm.md  web-server.md  websocket-design.md  websocket-implementation-plan.md  websockets.md  wheels-remaining-bugs.md
docs/compatibility-notes/: application-scope-object-in-custom-tag.md  cfloop-list-item.md  cfqueryparam-interpolated-value.md  custom-tag-attribute-collection.md  postgres-multi-statement-mutations.md  postgres-unknown-params.md  postgres-uuid-params.md  tag-attribute-interpolation.md  tag-string-interpolation.md
examples/: README.md
examples/dumpdemo/: Person.cfc  dump.cfm  index.cfm  qoq.cfm
examples/native_markdown/: README.md  main.cfm
examples/native_markdown/native/md/: Cargo.toml
examples/native_markdown/native/md/src/: lib.rs
examples/native_module_demo/: BoostedTally.cfc  README.md  main.cfm
examples/native_module_demo/native/greeter/: Cargo.toml
examples/native_module_demo/native/greeter/src/: lib.rs
examples/perf/: Point.cfc  README.md  bench_closure.cfm  bench_concat.cfm  bench_loop.cfm  bench_struct.cfm  bench_template.cfm  results.csv  run.sh
examples/websocket_chat/: README.md  index.html
examples/websocket_demo/: README.md  broadcast.cfm  index.html
scripts/: verify.sh
tests/: .cfconfig.json  Application.cfc  harness.cfm  runner.cfm  runtest.cfm
tests/async_kernel/: test_run_async.cfm  test_schedule.cfm
tests/comments/: BlockCommentTags.cfc  test_cfset_expression_comments.cfm  test_tags_in_block_comments.cfm
tests/compat_engine/: test_type_checking.cfm  test_wheels_batch_v0294.cfm
tests/config/: test_app_datasources.cfm  test_cfconfig_datasource.cfm  test_cfconfig_loading.cfm  (+1 more)
(+658 files in other folders)
