[workspace]
resolver = "2"
members = [
    "crates/cfml-common",
    "crates/cfml-config",
    "crates/cfml-compiler",
    "crates/cfml-codegen",
    "crates/cfml-vm",
    "crates/cfml-stdlib",
    "crates/cfml-qoq",
    "crates/cli",
    "crates/wasm",
    "crates/cfml-worker",
]
# Native modules under examples/ are standalone crates consumed only by
# `rustcfml --build`. They must not be members of the rustcfml workspace,
# otherwise cargo refuses to build the cocktail build directory nested under
# them.
exclude = [
    "examples/native_module_demo/native/greeter",
    "examples/native_markdown/native/md",
]

[workspace.package]
version = "0.105.0"
authors = ["RustCFML Team"]
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/RustCFML/RustCFML"
homepage = "https://github.com/RustCFML/RustCFML"
license = "MIT"

[workspace.dependencies]
cfml-common = { path = "crates/cfml-common", version = "0.105.0" }
cfml-config = { path = "crates/cfml-config", version = "0.105.0" }
cfml-compiler = { path = "crates/cfml-compiler", version = "0.105.0" }
cfml-codegen = { path = "crates/cfml-codegen", version = "0.105.0" }
cfml-vm = { path = "crates/cfml-vm", version = "0.105.0" }
cfml-stdlib = { path = "crates/cfml-stdlib", version = "0.105.0", default-features = false }
cfml-qoq = { path = "crates/cfml-qoq", version = "0.105.0" }

log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
indexmap = "2.0"
num-traits = "0.2"
rustc-hash = "1.1"

# Cranelift JIT — pulled in only by cfml-vm's optional `jit` feature, and only
# on native targets (the cfml-vm manifest target-gates them off wasm32).
# Pinned to the 0.132.x line verified to build/run here.
cranelift-jit = "0.132"
cranelift-module = "0.132"
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-native = "0.132"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
