[package]
name = "cfml-codegen"
description = "Walks the cfml-compiler AST and emits bytecode for cfml-vm. Includes optimisation passes such as counted-loop fusion."
keywords = ["cfml", "coldfusion", "bytecode", "codegen", "rustcfml"]
categories = ["compilers"]
readme = "../../README.md"
documentation = "https://docs.rs/cfml-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cfml-common = { workspace = true }
cfml-compiler = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
