[package]
name = "cfml-common"
description = "Core value types (CfmlValue, CfmlError) and trait surface (CfmlNative, Vfs) shared across the RustCFML compiler, VM, and stdlib."
keywords = ["cfml", "coldfusion", "rustcfml"]
categories = ["data-structures", "compilers"]
readme = "../../README.md"
documentation = "https://docs.rs/cfml-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }
