[package]
name = "cfml-compiler"
description = "CFML lexer, tag preprocessor, recursive-descent parser and AST for the RustCFML interpreter. Turns .cfm / .cfc source into the AST consumed by cfml-codegen."
keywords = ["cfml", "coldfusion", "parser", "lexer", "rustcfml"]
categories = ["parser-implementations", "compilers"]
readme = "../../README.md"
documentation = "https://docs.rs/cfml-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cfml-common = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
