[package]
name = "cfml-config"
description = "RustCFML .cfconfig.json schema, parser, env var expansion, and file resolution. Engine-agnostic: same file works across CommandBox/Lucee, BoxLang, and RustCFML; unknown keys are silently ignored."
keywords = ["cfml", "rustcfml", "cfconfig", "config"]
categories = ["config", "parser-implementations"]
readme = "../../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
log = { workspace = true }
