[package]
name = "cfml-vm"
description = "Stack-based bytecode VM for the RustCFML interpreter. Executes compiled CFML, dispatches builtin and user-defined functions, and exposes the register_native_fn / register_native_class APIs for Rust-backed extensions."
keywords = ["cfml", "coldfusion", "vm", "interpreter", "rustcfml"]
categories = ["compilers"]
readme = "../../README.md"
documentation = "https://docs.rs/cfml-vm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cfml-common = { workspace = true }
cfml-config = { workspace = true }
cfml-qoq = { workspace = true }
cfml-compiler = { workspace = true }
cfml-stdlib = { workspace = true, default-features = false, optional = true }
indexmap = { workspace = true }
cfml-codegen = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { version = "1", features = ["maths"] }
chrono = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }

[dev-dependencies]
cfml-stdlib = { workspace = true, default-features = false }

[features]
default = ["std", "real-threads"]
std = []
# Real OS-thread cfthread support. On by default for native targets; the wasm
# targets (cfml-worker, rustcfml-wasm) build with default-features disabled and
# fall back to the synchronous-inline cfthread path (no std::thread on wasm32).
real-threads = []
s3 = ["dep:cfml-stdlib", "cfml-stdlib/s3"]
