[package]
name = "cfml-vm"
description = "Stack-based bytecode VM for the RustCFML interpreter. Executes compiled CFML, dispatches builtin and user-defined functions, and exposes the register_native_fn / register_native_class APIs for Rust-backed extensions."
keywords = ["cfml", "coldfusion", "vm", "interpreter", "rustcfml"]
categories = ["compilers"]
readme = "../../README.md"
documentation = "https://docs.rs/cfml-vm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cfml-common = { workspace = true }
cfml-config = { workspace = true }
cfml-qoq = { workspace = true }
cfml-compiler = { workspace = true }
cfml-stdlib = { workspace = true, default-features = false, optional = true }
indexmap = { workspace = true }
cfml-codegen = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { version = "1", features = ["maths"] }
chrono = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }

# Cranelift JIT backend. Optional, native-only: the `jit` feature turns these
# on, and they are gated off wasm32 entirely so enabling `jit` on a wasm target
# is a build-time impossibility (mirrors MatchBox). The interpreter is always
# the default and the universal fallback; nothing here changes a default build.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustc-hash = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }

[dev-dependencies]
cfml-stdlib = { workspace = true, default-features = false }

[features]
default = ["std", "real-threads"]
std = []
# Real OS-thread cfthread support. On by default for native targets; the wasm
# targets (cfml-worker, rustcfml-wasm) build with default-features disabled and
# fall back to the synchronous-inline cfthread path (no std::thread on wasm32).
real-threads = []
s3 = ["dep:cfml-stdlib", "cfml-stdlib/s3"]
# Multi-tier Cranelift JIT. Opt-in (build with `--features jit`); runtime
# kill-switch `RUSTCFML_JIT=0` disables a compiled-in JIT at startup. All JIT
# code is gated `not(target_arch = "wasm32")` and the wasm crates depend on
# cfml-vm with default-features = false, so wasm can never pull Cranelift in —
# build-time impossibility there. See crates/cfml-vm/src/jit/.
jit = [
    "dep:rustc-hash",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-native",
]
