[package]
name = "cfml-worker"
description = "Cloudflare Workers host glue for RustCFML — request routing, scope population, Application.cfc lifecycle, and KV/Hyperdrive plug-points."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
# Plain rlib — the host project supplies the cdylib that workers-build consumes.
crate-type = ["rlib"]

[dependencies]
cfml-common = { path = "../cfml-common" }
cfml-compiler = { path = "../cfml-compiler" }
cfml-codegen = { path = "../cfml-codegen" }
cfml-vm = { path = "../cfml-vm" }
cfml-stdlib = { path = "../cfml-stdlib", default-features = false }
cfml-config = { path = "../cfml-config" }
indexmap = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
