[package]
name = "rustcfml-cli"
description = "CFML (ColdFusion Markup Language) interpreter and self-contained app builder, written in Rust. Provides the `rustcfml` binary and a library for embedding the runtime in `rustcfml --build`-produced binaries that include native Rust modules."
keywords = ["cfml", "coldfusion", "interpreter", "lucee", "boxlang"]
categories = ["command-line-utilities", "compilers", "web-programming"]
readme = "../../README.md"
documentation = "https://docs.rs/rustcfml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "rustcfml_cli"
path = "src/lib.rs"

[[bin]]
name = "rustcfml"
path = "src/main.rs"

[dependencies]
cfml-common = { workspace = true }
cfml-config = { workspace = true }
cfml-compiler = { workspace = true }
cfml-codegen = { workspace = true }
cfml-vm = { workspace = true }
indexmap = { workspace = true }
cfml-stdlib = { workspace = true, features = ["all-databases", "xml"] }
log = { workspace = true }
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
regex = "1"
multer = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
