[package]
name = "rustcfml-cli"
description = "CFML (ColdFusion Markup Language) interpreter and self-contained app builder, written in Rust. Provides the `rustcfml` binary and a library for embedding the runtime in `rustcfml --build`-produced binaries that include native Rust modules."
keywords = ["cfml", "coldfusion", "interpreter", "lucee", "boxlang"]
categories = ["command-line-utilities", "compilers", "web-programming"]
readme = "../../README.md"
documentation = "https://docs.rs/rustcfml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "rustcfml_cli"
path = "src/lib.rs"

[[bin]]
name = "rustcfml"
path = "src/main.rs"

[dependencies]
cfml-common = { workspace = true }
cfml-config = { workspace = true }
cfml-compiler = { workspace = true }
cfml-codegen = { workspace = true }
cfml-qoq = { workspace = true }
cfml-vm = { workspace = true, features = ["s3"] }
indexmap = { workspace = true }
cfml-stdlib = { workspace = true, features = ["default", "all-databases", "s3"] }
log = { workspace = true }
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time"] }
regex = "1"
multer = "3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memcache = { version = "0.17", optional = true }
memberlist = { version = "0.8", optional = true, default-features = false, features = ["tokio", "tcp", "serde"] }
automerge = { version = "0.9", optional = true }
bincode = { version = "2", optional = true, features = ["serde"] }
socket2 = { version = "0.5", optional = true, features = ["all"] }

[features]
default = ["memcached", "cluster"]
memcached = ["dep:memcache"]
cluster = ["dep:memberlist", "dep:automerge", "dep:bincode", "dep:socket2"]
# Passthrough to the VM's Cranelift JIT (native only). **On by default** via
# `cfml-vm`'s default feature set; this feature exists so that a downstream
# build that opts out of cfml-vm defaults can still flip the JIT back on
# explicitly from the CLI side. Runtime kill-switch: `RUSTCFML_JIT=0`.
jit = ["cfml-vm/jit"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
