[package]
name = "rustcfml-cli"
description = "CFML (ColdFusion Markup Language) interpreter and self-contained app builder, written in Rust. Provides the `rustcfml` binary and a library for embedding the runtime in `rustcfml --build`-produced binaries that include native Rust modules."
keywords = ["cfml", "coldfusion", "interpreter", "lucee", "boxlang"]
categories = ["command-line-utilities", "compilers", "web-programming"]
readme = "../../README.md"
documentation = "https://docs.rs/rustcfml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "rustcfml_cli"
path = "src/lib.rs"

[[bin]]
name = "rustcfml"
path = "src/main.rs"

[dependencies]
cfml-common = { workspace = true }
cfml-config = { workspace = true }
cfml-compiler = { workspace = true }
cfml-codegen = { workspace = true }
cfml-qoq = { workspace = true }
cfml-vm = { workspace = true, features = ["s3"] }
indexmap = { workspace = true }
cfml-stdlib = { workspace = true, features = ["default", "all-databases", "s3"] }
log = { workspace = true }
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time", "signal"] }
regex = "1"
multer = "3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memcache = { version = "0.17", optional = true }
# memcache enables its `tls` feature by default, which pulls in native openssl.
# `vendored` compiles OpenSSL from source and statically links it, so the build
# needs no system OpenSSL — required for the Windows MSVC release runner, and it
# makes the distributed binaries self-contained on every platform.
openssl = { version = "0.10", features = ["vendored"], optional = true }
memberlist = { version = "0.8", optional = true, default-features = false, features = ["tokio", "tcp", "serde"] }
automerge = { version = "0.9", optional = true }
bincode = { version = "2", optional = true, features = ["serde"] }
socket2 = { version = "0.5", optional = true, features = ["all"] }
# socket.io transport (Phase 3). Default features only — the modern socket.io
# client speaks Engine.IO v4 (socketioxide's default); we own fan-out via our
# own registry/Broker, so `state`/`extensions`/`v4` are unnecessary.
socketioxide = "0.16.3"
# Heap profiler (leak hunting). Off by default; build with `--features dhat-heap`
# to swap in DHAT's global allocator and dump `dhat-heap.json` on clean shutdown.
dhat = { version = "0.3", optional = true }

[features]
default = ["memcached", "cluster", "jit"]
# Enable DHAT heap profiling. Adds a global allocator + a Profiler held for the
# whole process lifetime; writes dhat-heap.json on graceful (Ctrl+C) shutdown.
dhat-heap = ["dep:dhat"]
memcached = ["dep:memcache", "dep:openssl"]
cluster = ["dep:memberlist", "dep:automerge", "dep:bincode", "dep:socket2"]
# Passthrough to the VM's Cranelift JIT (native only). **On by default** via
# `cfml-vm`'s default feature set; this feature exists so that a downstream
# build that opts out of cfml-vm defaults can still flip the JIT back on
# explicitly from the CLI side. Runtime kill-switch: `RUSTCFML_JIT=0`.
jit = ["cfml-vm/jit"]

[dev-dependencies]
tokio-tungstenite = "0.28"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
