[package]
name = "rustcfml-wasm"
description = "CFML interpreter for WebAssembly"
version = "0.1.0"
edition = "2021"
authors = ["RustCFML Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
cfml-common = { path = "../cfml-common" }
cfml-compiler = { path = "../cfml-compiler" }
cfml-codegen = { path = "../cfml-codegen" }
cfml-vm = { path = "../cfml-vm", default-features = false, features = ["std"] }
cfml-stdlib = { path = "../cfml-stdlib", default-features = false }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

# wasm-pack runs Binaryen's `wasm-opt -O` as a post-build step. The bundled
# wasm-opt SIGSEGVs (signal 11) on this module in CI — it can't handle the wasm
# features the current Rust toolchain emits as the module grows, which broke the
# "Deploy Interactive Demo" workflow from v0.240.0 onward. Disable the
# optimization pass: the demo .wasm is a bit larger but functionally identical,
# and the deploy is deterministic. (Our gate's wasm check is `cargo build
# --target wasm32-...`, which doesn't run wasm-opt, so only the deploy hit this.)
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

